[package]
name = "refview"
version = "0.1.0"
authors = ["Dylan Staatz <dylanstaatz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Get a reference view of some fields into a struct."
readme = "README.md"
repository = "https://github.com/dstaatz/ref-view/"

[dependencies]
refview_derive = { version = "=0.1.0", path = "../refview_derive" }
