[package]
name = "refview_derive"
version = "0.1.0"
authors = ["Dylan Staatz <dylanstaatz@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Get a reference view of some fields into a struct."
readme = "README.md"
repository = "https://github.com/dstaatz/ref-view/"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
